created clients page test script