@@ -8,6 +8,7 @@ import org.openqa.selenium.By;
 import org.openqa.selenium.Keys;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
+import org.openqa.selenium.support.ui.Select;
 
 import Utility.DriverManager;
 import Utility.GenerateReports;
@@ -31,6 +32,10 @@ public class CSAT_Clients_Page extends WaitsManager {
 	By ownerFullName = By.xpath("//label[text()='Owner Name:']/following-sibling::input");
 	By ownerEmail = By.xpath("//label[text()='Owner Email:']/following-sibling::input");
 	By ownerError = By.xpath("//div[@class='MuiSnackbarContent-message css-1o19295']");
+
+	By addOwner = By.cssSelector("div.add-owner-button>button");
+	By paginationEntries = By.cssSelector("select.survey-items-per-page-select");
+	By deleteOwnerContact = By.xpath("//img[@alt='Delete Owner']");
 
 	public void clientHeaderValidation() throws Exception {
 		try {
@@ -69,7 +74,7 @@ public class CSAT_Clients_Page extends WaitsManager {
 		}
 	}
 
-	public void clearSearchClient(String clientName) throws Exception {
+	public void clearSearchClient() throws Exception {
 		try {
 			implWait(driver);
 			boolean elementExist = !driver.findElements(searchClients).isEmpty();
@@ -122,8 +127,8 @@ public class CSAT_Clients_Page extends WaitsManager {
 				waitForElementToBeClickable(actionIcon, 30);
 				icon.click();
 			} else {
-				logger.info(action + " is not available for " + projectName);
-				grep.infoTest(action + " is not available for " + projectName);
+				logger.error(action + " is not available for " + projectName);
+				grep.failTest(action + " is not available for " + projectName);
 			}
 		} catch (Exception e) {
 			e.printStackTrace();
@@ -156,7 +161,7 @@ public class CSAT_Clients_Page extends WaitsManager {
 		}
 	}
 
-	public void clearCustomerName() throws Exception {
+	public void clearOwnerName() throws Exception {
 		try {
 			implWait(driver);
 			boolean elementExists = !driver.findElements(ownerFullName).isEmpty();
@@ -164,8 +169,8 @@ public class CSAT_Clients_Page extends WaitsManager {
 				List<WebElement> custName = driver.findElements(ownerFullName);
 				if (custName.size() > 0) {
 					waitForElement(ownerFullName, 30);
-					WebElement lastElement = custName.get(custName.size() - 1);
-					lastElement.sendKeys(Keys.CONTROL + "a" + Keys.DELETE);
+//					WebElement lastElement = custName.get(custName.size() - 1);
+					custName.getLast().sendKeys(Keys.CONTROL + "a" + Keys.DELETE);
 				}
 			} else {
 				grep.failTest("Customer Name not available");
@@ -202,7 +207,7 @@ public class CSAT_Clients_Page extends WaitsManager {
 		}
 	}
 
-	public void clearCustomerEmail() throws Exception {
+	public void clearOwnerEmail() throws Exception {
 		try {
 			implWait(driver);
 			boolean elementExists = !driver.findElements(ownerEmail).isEmpty();
@@ -210,8 +215,8 @@ public class CSAT_Clients_Page extends WaitsManager {
 				List<WebElement> custEmail = driver.findElements(ownerEmail);
 				if (custEmail.size() > 0) {
 					waitForElement(ownerEmail, 30);
-					WebElement lastElement = custEmail.get(custEmail.size() - 1);
-					lastElement.sendKeys(Keys.CONTROL + "a" + Keys.DELETE);
+//					WebElement lastElement = custEmail.get(custEmail.size() - 1);
+					custEmail.getLast().sendKeys(Keys.CONTROL + "a" + Keys.DELETE);
 				}
 			} else {
 				grep.failTest("Customer Name not available");
@@ -237,6 +242,181 @@ public class CSAT_Clients_Page extends WaitsManager {
 			} else {
 				grep.failTest("Owner Email not available");
 				logger.error("Owner Email not available");
+			}
+		} catch (Exception e) {
+			e.printStackTrace();
+			grep.failTest("Test Failed :" + e.getMessage());
+			logger.error("Test Failed :" + e.getMessage());
+		}
+	}
+
+	public void clickAddOwnerBtn() throws Exception {
+		try {
+			implWait(driver);
+
+			WebElement icon = driver.findElement(addOwner);
+			if (icon.isDisplayed()) {
+				waitForElementToBeClickable(addOwner, 30);
+				icon.click();
+			} else {
+				logger.info("Add Owner button is not available");
+				grep.infoTest("Add Owner button is not available ");
+			}
+		} catch (Exception e) {
+			e.printStackTrace();
+			grep.failTest("Test Failed :" + e.getMessage());
+			logger.error("Test Failed :" + e.getMessage());
+		}
+	}
+
+	public void selectPagination(String option) throws Exception {
+		try {
+			implWait(driver);
+			boolean elementExist = !driver.findElements(paginationEntries).isEmpty();
+			if (elementExist) {
+				WebElement statusOption = driver.findElement(paginationEntries);
+				Select statusOpt = new Select(statusOption);
+				statusOpt.selectByVisibleText(option);
+			} else {
+				grep.failTest(option + " Pagination Option not Available");
+				logger.error(option + " Pagination Option not Available");
+			}
+
+		} catch (Exception e) {
+			e.printStackTrace();
+			grep.failTest("Test Failed :" + e.getMessage());
+			logger.error("Test Failed :" + e.getMessage());
+
+		}
+	}
+
+// VERIFY PAGINATION
+	public void verifyPaginationSelectedOption(String option) throws Exception {
+		try {
+			implWait(driver);
+			boolean elementExist = !driver.findElements(paginationEntries).isEmpty();
+			if (elementExist) {
+				WebElement statusOption = driver.findElement(paginationEntries);
+				Select statusOpt = new Select(statusOption);
+
+				String getOption = statusOpt.getFirstSelectedOption().getText();
+				if (getOption.equals(option)) {
+					grep.passTest(getOption + " pagination Option Selected");
+					logger.info(getOption + " pagination Option Selected");
+				} else {
+					grep.failTest(getOption + " pagination Option not Selected");
+					logger.error(getOption + " pagination Option not Selected");
+				}
+			} else {
+				grep.failTest(option + " Pagination Option not Available");
+				logger.error(option + " Pagination Option not Available");
+
+			}
+		} catch (Exception e) {
+			e.printStackTrace();
+			grep.failTest("Test Failed :" + e.getMessage());
+			logger.error("Test Failed :" + e.getMessage());
+
+		}
+	}
+
+	public void clickPopupBtns(String btnValue) throws Exception {
+		try {
+			implWait(driver);
+			By btnClick = By.xpath("//button[text()='" + btnValue + "']");
+
+			WebElement icon = driver.findElement(btnClick);
+			if (icon.isDisplayed()) {
+				waitForElementToBeClickable(btnClick, 30);
+				icon.click();
+			} else {
+				logger.error(btnClick + " is not available");
+				grep.failTest(btnClick + " is not available");
+			}
+		} catch (Exception e) {
+			e.printStackTrace();
+			grep.failTest("Test Failed :" + e.getMessage());
+			logger.error("Test Failed :" + e.getMessage());
+		}
+	}
+
+	public void verifyPopupBtnDisable(String btnValue) throws Exception {
+		try {
+			implWait(driver);
+			By btnClick = By.xpath("//button[text()='" + btnValue + "']");
+
+			WebElement icon = driver.findElement(btnClick);
+			if (icon.isEnabled()) {
+				logger.error(btnValue + " is Enabled");
+				grep.failTest(btnValue + " is Enabled");
+			} else {
+				logger.info(btnValue + " is Disabled");
+				grep.passTest(btnValue + " is Disabled");
+			}
+		} catch (Exception e) {
+			e.printStackTrace();
+			grep.failTest("Test Failed :" + e.getMessage());
+			logger.error("Test Failed :" + e.getMessage());
+		}
+	}
+
+	public void getAccountDetails(String clientName) throws Exception {
+		try {
+
+			By ownerName = By.xpath("//td[text()='" + clientName + "']/parent::tr/td[2]");
+			By ownerEmail = By.xpath("//td[text()='" + clientName + "']/parent::tr/td[3]");
+			implWait(driver);
+			boolean elementExist = !driver.findElements(ownerName).isEmpty();
+			if (elementExist) {
+				String name = driver.findElement(ownerName).getText();
+				String email = driver.findElement(ownerEmail).getText();
+
+				logger.info("Client Name: " + name);
+				grep.passTest("Client Name: " + name);
+				logger.info("Client Email: " + email);
+				grep.passTest("Client Email: " + email);
+			} else {
+				logger.info(clientName + " is not available");
+				grep.failTest(clientName + " is not available");
+			}
+		} catch (Exception e) {
+			e.printStackTrace();
+			grep.failTest("Test Failed :" + e.getMessage());
+			logger.error("Test Failed :" + e.getMessage());
+		}
+	}
+
+	public void deleteOwnerContactBtn() throws Exception {
+		try {
+			implWait(driver);
+			boolean elementExists = !driver.findElements(deleteOwnerContact).isEmpty();
+			if (elementExists) {
+				List<WebElement> delete = driver.findElements(deleteOwnerContact);
+				if (delete.size() > 0) {
+					waitForElement(deleteOwnerContact, 60);
+					delete.getLast().click();
+				}
+			} else {
+				grep.failTest("Delete Owner Contact button not available");
+				logger.error("Delete Owner Contact button not available");
+			}
+		} catch (Exception e) {
+			e.printStackTrace();
+			grep.failTest("Test Failed :" + e.getMessage());
+			logger.error("Test Failed :" + e.getMessage());
+		}
+	}
+
+	public void deleteOwnerContactBtn_Disabled() throws Exception {
+		try {
+			implWait(driver);
+			WebElement delete = driver.findElement(deleteOwnerContact);
+			if (delete.isEnabled()) {
+				logger.error("Delete Button is Enabled");
+				grep.failTest("Delete Button is Enabled");
+			} else {
+				logger.info("Delete Button is Disabled");
+				grep.passTest("Delete Button is Disabled");
 			}
 		} catch (Exception e) {
 			e.printStackTrace();
